# awg

./: README.md  pyproject.toml  test.fls  test.tex
awg/src/: extractor.py  filewriter.py  generator.py  main.py
output/: 2018_AIME_II.tex  2019_AIME_II.tex  2020_AIME_II.tex  2020_AMC_12A.tex  basic.tex  document.tex  hello.tex  test copy.html  test.fdb_latexmk  test.md  test_mc.tex
src/: extractor.py  filewriter.py  generator.py  main.py  randomizer.py
src/awg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_awg.py
