[tool.poetry]
name = "awg"
version = "0.1.0"
description = ""
authors = ["Siyuan Chen <daniel@apextone.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"
requests = "^2.23.0"
lxml = "^4.5.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
